# FlexInvoice-backend

./: .gitignore  db.sqlite3  pyproject.toml
common/: utils.py
invoice/: models.py  serializers.py
invoice/migrations/: 0001_initial.py  0002_alter_invoice_issue_date.py  0003_invoice_status_alter_invoice_amount_and_more.py
project/: settings.py  urls.py
user/: models.py  serializer.py  urls.py  views.py
user/migrations/: 0001_initial.py
